--- a/IODevice_Test/IODevice_Test.vcxproj
+++ b/IODevice_Test/IODevice_Test.vcxproj
@@ -230,4 +230,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="IOMFCTest.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
