--- a/IODevice_CSharp_Wrapper/IODevice_CSharp_Wrapper.csproj
+++ b/IODevice_CSharp_Wrapper/IODevice_CSharp_Wrapper.csproj
@@ -29,9 +29,11 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <GenerateSerializationAssemblies>On</GenerateSerializationAssemblies>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -48,6 +50,7 @@
     <Compile Include="IOToolkit\Facades\InputCoreTypes.cs" />
     <Compile Include="IOToolkit\Facades\IODevice.cs" />
     <Compile Include="IOToolkit\Facades\IODeviceController.cs" />
+    <Compile Include="IOToolkit\Facades\IOSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
