--- a/IODevice_Test/IODevice_Test.vcxproj
+++ b/IODevice_Test/IODevice_Test.vcxproj
@@ -234,6 +234,7 @@
     <None Include="res\IOMFCTest.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\icon1.ico" />
     <Image Include="res\IOMFCTest.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
